adjust tests for achievements